fix(editor): align wp editor styling

--- a/assets/src/scss/frontend/kids/_learning-area.scss
+++ b/assets/src/scss/frontend/kids/_learning-area.scss
@@ -5,12 +5,12 @@
 [data-tutor-ui='kids'] {
   .tutor-resources-wrapper,
   .tutor-learning-area-qna,
-  .tutor-lesson-content-tab,
+  .tutor-lesson-content .tutor-lesson-content-tab,
   .tutor-assignment-info,
   .tutor-assignment-description,
   .tutor-assignment-attachments,
   .tutor-assignment-form {
-    @include tutor-kids-shadow(false, $tutor-border-idle, $tutor-radius-5xl, sm);
+    @include tutor-kids-shadow(false, $tutor-border-idle, $tutor-radius-5xl, sm)
   }
 
   .tutor-assignment-feedback {
